--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,24 @@
 	<build>
 		<plugins>
 		<plugin>
-            <groupId>org.mule.tools.maven</groupId>
-            <artifactId>mule-maven-plugin</artifactId>
-            <version>3.5.0</version>
-            <extensions>true</extensions>
-            <configuration>
-                <classifier>mule-application</classifier>
-            </configuration>
-        </plugin>
+			<groupId>org.mule.tools.maven</groupId>
+			<artifactId>mule-maven-plugin</artifactId>
+			<version>3.7.1</version>
+			<extensions>true</extensions>
+			<configuration>
+				<cloudHubDeployment>
+					<uri>https://anypoint.mulesoft.com</uri>
+					<muleVersion>${app.runtime}</muleVersion>
+					<username>lkswamy</username>
+					<password>11-Feb-1995</password>
+					<applicationName>hello-world</applicationName>
+					<environment>prod</environment>
+					<region>us-east-1</region>
+					<workers>1</workers>
+					<workerType>MICRO</workerType>
+				</cloudHubDeployment>
+			</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
