--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
 - name: "maven"
   args: ["mvn", "--version"]
 - name: "maven"
-  args: ["mvn", "clean", "deploy", "-DmuleDeploy", "-X", "-e"]
+  args: ["mvn", "clean", "install"]
