--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,4 @@ steps:
   script: echo hello
 - name: maven:3.3-jdk-8
   entrypoint: mvn
-  args: ['--version','package','-Dmaven.test.skip=true']
+  args: ['clean','install']
