--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,6 @@ steps:
 - name: node
   entrypoint: npm
   args: ["install", "-g", "anypoint-cli-v4"]  
-#- name: maven:3.3-jdk-8
-#  entrypoint: mvn
-#  args: ['clean','deploy', '-DmuleDeploy']
+- name: ubuntu
+  entrypoint: anypoint-cli-v4
+  args: ['--version']
