--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,5 @@ steps:
 - name: node
   entrypoint: npm
   args: ["install", "-g", "anypoint-cli-v4"]  
-- name: node
-  entrypoint: anypoint-cli-v4
-  args: ['--version']
+- name: 'bash'
+  args: ['anypoint-cli-v4 --version']
