echo path added

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,9 @@ steps:
   script: echo hello
 - name: node
   entrypoint: npm
-  args: ["install", "-g", "anypoint-cli-v4"]  
+  args: ["install", "-g", "anypoint-cli-v4"]
+- name: ubuntu
+  args: ["echo", "$PATH"] 
 - name: node
   entrypoint: anypoint-cli-v4
   args: [' --version']
