--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '--build-arg', 'apiName=$TRIGGER_NAME', '--build-arg', 'workerSize=0.1', '--build-arg', 'runtime=4.4.0', '--build-arg', 'workers=1', '--build-arg', 'enviroment=STAGING' , '--build-arg', 'override=true', '-f', 'DockerFile', '.' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'europe-west3-docker.pkg.dev/advance-age-372109/mule/mule-cicd-anypointcli', '.' ]
